--- a/Simulator.ipynb
+++ b/Simulator.ipynb
@@ -32,6 +32,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "990b7ee0-4764-494c-89c9-c16662efbfef",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "be8f4244-7bdc-4cad-8b52-dcbdd9712f0e",
@@ -113,6 +121,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "187dcf67-5979-400d-91b6-bcb301f3a75f",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "a9909743-b6a4-4018-8aa7-9be19aa5460c",
@@ -174,6 +190,14 @@
    "source": [
     "grid()\n",
     "plot(x2_log[:,0], x2_log[:,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0341c2bd-9830-4d61-89bb-f69071064e90",
+   "metadata": {},
+   "source": [
+    "## Exercise 4 Constant"
    ]
   },
   {
@@ -268,6 +292,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5e405dd-5add-4b0b-ae4f-1e6659cd8a5d",
+   "metadata": {},
+   "source": [
+    "## Exercise 4 Random"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "eb60c004-2dd3-4275-b3dc-88e3e8c55f14",
@@ -344,22 +376,6 @@
     "grid()\n",
     "plot(x4_log[:,0], x4_log[:,1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d341261-7be8-43ce-9f21-0ab0344e91f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efd0a552-e011-494c-8ced-fb0f51ec22b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
